<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    app:cardElevation="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.db.chart.view.LineChartView
            android:id="@+id/lineChart"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="10dp"/>

        <android.support.design.widget.TabLayout
            android:id="@+id/tablayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/five_days"
                android:contentDescription="@string/five_days"
                />

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/one_month"
                android:contentDescription="@string/one_month"
                />

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/six_months"
                android:contentDescription="@string/six_months"
                />

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/one_year"
                android:contentDescription="@string/one_year"
                />


        </android.support.design.widget.TabLayout>

        <include layout="@layout/gridlayout_details"/>


    </LinearLayout>


</android.support.v7.widget.CardView>
